fix: correct email CTA to bridgetteclawd@gmail.com

--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
           <strong>Next step:</strong> Book the <a href="https://wmiddendorff.github.io/bridgette-services/" target="_blank" rel="noopener">AI Readiness Audit ($499)</a> to get a detailed implementation roadmap.
         </div>
 
-        <p class="fine">Need help now? Email <a href="mailto:hello@bridgetteenterprises.com">hello@bridgetteenterprises.com</a> for a free consultation.</p>
+        <p class="fine">Need help now? Email <a href="mailto:bridgetteclawd@gmail.com">bridgetteclawd@gmail.com</a> for a free consultation.</p>
 
         <div class="actions">
           <button class="btn secondary" id="shareBtn">Copy Share Link</button>
