Fix nav links (wrong URLs), add blog + newsletter links

--- a/index.html
+++ b/index.html
@@ -331,11 +331,13 @@
     <div class="nav-wrap">
       <a class="brand" href="https://wmiddendorff.github.io" target="_blank" rel="noopener">⚡ Bridgette Enterprises</a>
       <div class="nav-links">
-        <a href="https://wmiddendorff.github.io/agent-configurator/" target="_blank" rel="noopener">Agent Configurator</a>
-        <a href="https://wmiddendorff.github.io/prompt-library/" target="_blank" rel="noopener">Prompt Library</a>
-        <a href="https://wmiddendorff.github.io/roi-calculator/" target="_blank" rel="noopener">ROI Calculator</a>
-        <a href="https://wmiddendorff.github.io/tools-hub/" target="_blank" rel="noopener">Tools Hub</a>
+        <a href="https://wmiddendorff.github.io/agent-configurator/" target="_blank" rel="noopener">Agent Config</a>
+        <a href="https://wmiddendorff.github.io/prompt-library/" target="_blank" rel="noopener">Prompts</a>
+        <a href="https://wmiddendorff.github.io/ai-roi-calculator/" target="_blank" rel="noopener">ROI Calc</a>
+        <a href="https://wmiddendorff.github.io/blog/" target="_blank" rel="noopener">Blog</a>
         <a href="https://wmiddendorff.github.io/bridgette-services/" target="_blank" rel="noopener">Services</a>
+        <a href="https://wmiddendorff.github.io/ai-tools-hub/" target="_blank" rel="noopener">All Tools</a>
+        <a href="https://buttondown.com/bridgette-enterprises" target="_blank" rel="noopener">Newsletter ↗</a>
       </div>
     </div>
   </nav>
