Add JSON-LD structured data for SEO

--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
       .bar-fill { background: #555; }
     }
   </style>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebApplication","name":"AI Readiness Assessment Quiz","description":"Take the 2-minute AI Readiness Assessment to score your business across data, process, team, tech, and strategy.","url":"https://wmiddendorff.github.io/ai-readiness-quiz/","applicationCategory":"BusinessApplication","operatingSystem":"Web","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"author":{"@type":"Organization","name":"Bridgette Enterprises","url":"https://wmiddendorff.github.io/"}}</script>
 </head>
 <body>
   <nav class="nav" aria-label="Main">
